<resources>
    <string name="app_name">Firebase Messenger</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="type_message">Type Message</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="btn_save">Save</string>
    <string name="label_sign_in">Login</string>
    <string name="label_message">Message</string>
    <string name="label_profile">Profile</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="something_went_wrong">Something went wrong…</string>
    <string name="login_success">Login success!</string>
    <string name="invalid_credentials">Email or password is invalid…</string>
    <string name="user_name_must_be_non_empty">User name must be non-empty</string>
    <string name="email_must_be_non_empty">Email must be non-empty</string>
    <string name="password_must_be_non_empty">Password must be non-empty</string>
    <string name="password_length_is_too_short">Password must be longer than 6 characters</string>
    <string name="confirm_password">Confirm your password!</string>
    <string name="passwords_dont_match">Passwords don\'t match…</string>
    <string name="check_email">Please check your email input</string>
    <string name="registration_success">Registration success</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="browse_gallery">Browse gallery</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="label_settings">Settings</string>
    <string name="back_button">Back button</string>
    <string name="name">Name</string>
    <string name="friends">Friends</string>
    <string name="find_friends">Find Friends</string>
    <string name="no_results">No Results</string>
    <string name="db_user_id">userId</string>
    <string name="db_user_name">userName</string>
    <string name="db_user_profile_image">userProfileImage</string>
    <string name="search_friends">Search Friends</string>
    <string name="profile_picture">Profile picture</string>
    <string name="user_id_tag">USER_ID</string>
    <string name="change_acc_data">Change account data</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm password</string>
    <string name="added_you_to_friends">" added"\n"you to friends."</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all">Clear all</string>
    <string name="notifications">Notifications</string>
    <string name="file_positions">positions</string>
    <string name="you_have_new_message">You have a new message!</string>
</resources>