<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_new_email"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_mail"
        android:drawablePadding="12dp"
        android:hint="@string/enter_new_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text=""/>
    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock"
        android:drawablePadding="12dp"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/colorText"
        app:layout_constraintTop_toBottomOf="@id/et_new_email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text=""/>
    <EditText
        android:id="@+id/et_confirm_new_password"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock"
        android:drawablePadding="12dp"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/colorText"
        app:layout_constraintTop_toBottomOf="@id/et_new_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text=""/>

    <Button
        android:id="@+id/apply_changes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/apply_changes"
        app:layout_constraintEnd_toEndOf="@+id/et_confirm_new_password"
        app:layout_constraintStart_toStartOf="@+id/et_confirm_new_password"
        app:layout_constraintTop_toBottomOf="@+id/et_confirm_new_password"
        android:backgroundTint="@color/colorPrimary"/>
</androidx.constraintlayout.widget.ConstraintLayout>