<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:elevation="@dimen/cardview_default_elevation"
        android:fontFamily="@font/archivo_regular"
        android:text="@string/label_settings"
        android:textColor="@color/colorWhite"
        android:textSize="27dp"
        android:translationZ="@dimen/cardview_compat_inset_shadow"
        android:background="@color/colorGreen"
        android:paddingStart="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:padding="10dp"
        android:layout_margin="16dp"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_new_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/gilroy_light"
        android:hint="@string/enter_new_name"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <ImageView
        android:id="@+id/iv_profile_picture"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_new_name"
        app:srcCompat="@drawable/settings_profile_picture_placeholder" />

    <TextView
        android:id="@+id/tv_new_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="16dp"
        android:textSize="16dp"
        android:text="@string/new_profile_picture"
        app:layout_constraintTop_toBottomOf="@id/et_new_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/gallery_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browse_gallery"
        app:layout_constraintEnd_toEndOf="@+id/iv_profile_picture"
        app:layout_constraintStart_toStartOf="@+id/iv_profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile_picture" />

    <Button
        android:id="@+id/apply_changes_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/apply_changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_to_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/arrow_back"
        app:layout_constraintEnd_toStartOf="@+id/apply_changes_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/apply_changes_button" />
</androidx.constraintlayout.widget.ConstraintLayout>