<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    app:layout_constraintHeight_max="wrap"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/notifications"
            android:fontFamily="@font/roboto_light"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/back_ll"
            android:orientation="vertical"
            android:padding="5dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_notifications"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                tools:listitem="@layout/item_profile_notification" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/back_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/rebooking_back_button_ll"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/clear_all_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".49"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/clear_all"
                    android:textAlignment="center"
                    android:textSize="16dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_button_3"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/cancel"
                    android:textAlignment="center"
                    android:textSize="16dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_button_3"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
